[package]
name = "reader"
version = "0.1.0"
authors = ["Jamey Sharp <jamey@minilop.net>"]
edition = "2018"

[dependencies]
gio = "*"
glib = "*"
gtk = "0.8.0"
relm = "0.19.0"
relm-derive = "0.19.0"
rss = { version = "*", default-features = false }
webkit2gtk = "*"
surf = { version = "2.0.0-alpha.3", default-features = false, features = ["native-client"] }
